(lang dune 3.6)

(name room_draw)

(generate_opam_files true)

(source
 (github mlea/room_draw))

(package
 (name room_draw)
 (synopsis "A short synopsis")
 (description "A longer description")
 (depends ocaml dune)
 (tags
  (topics "to describe" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/dune-files.html#dune-project
